resources/4-ingress/2-ingress-tls.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: prez-k8s-ingress-tls
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - secretName: prez-k8s-tls
  rules:
    - http:
        paths:
          - path: /workshop-k8s-pp-tls
            backend:
              serviceName: prez-k8s-load-balancer
              servicePort: 80
